[package]
name = "transfer-hook-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.16"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0.24"
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "0.4.3"
spl-token-2022 = { version = "3.0.2",  features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "hook"

